<resources>
    <string name="app_name">habitTrackerTest01</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">pzt</string>
    <string name="tuesday">sal</string>
    <string name="wednesday">çar</string>
    <string name="thursday">per</string>
    <string name="friday">cum</string>
    <string name="saturday">cmt</string>
    <string name="sunday">pzr</string>
    <string name="today">BUGÜN</string>
    <string name="date">5 may</string>


    <string name="make_new_habit_text">Yeni Bir Alışkanlık Oluştur</string>

    <string name="habit_type_one_button_text">Tek</string>
    <string name="habit_type_regular_button_text">Düzenli</string>
    <string name="habit_type_negative_button_text">Olumsuz</string>
    <string name="habit_type_text">%s Alışkanlık</string>


    <string name="sava_habit">Alışkanlığı Kaydet</string>
    <string name="habit_name_text">Alışkanlık İsmi</string>
    <string name="habit_description">Bir açıklama ekleyin - İsteğe bağlı</string>
    <string name="chose_habit_color_text">Renk Seçin</string>
</resources>