<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/lytHabitTypeSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnOneHabit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/active_color"
            android:text="@string/habit_type_one_button_text" />

        <Button
            android:id="@+id/btnNegativeHabit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/passive_color"
            android:text="@string/habit_type_negative_button_text" />

        <Button
            android:id="@+id/btnRegularHabit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/passive_color"
            android:text="@string/habit_type_regular_button_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/txthabitTypeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytHabitTypeSection"
        tools:text="Düzenli Alışkanlık|Olumsuz Alışkanlık|Tek Seferlik Alışkanlık" />

</androidx.constraintlayout.widget.ConstraintLayout>