<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.MainFragment">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrCalenderSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMonday"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/monday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTuesday"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtWednesday"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="43dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtThursday"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="43dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtfriday"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="235dp"
                tools:layout_editor_absoluteY="43dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSaturday"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="293dp"
                tools:layout_editor_absoluteY="43dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSunday"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="352dp"
                tools:layout_editor_absoluteY="43dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_time_intervals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/rc_time_intervals_item"
        app:layout_constraintTop_toBottomOf="@+id/lnrCalenderSection"
        tools:layout_editor_absoluteX="1dp" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_habit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/rc_time_intervals_item"
        app:layout_constraintTop_toBottomOf="@+id/lnrCalenderSection"
        tools:layout_editor_absoluteX="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>